removed header animations to fix bug with z-index of cart-dropdown and updated shop data with new data and added cart utils to group cart data using quantity

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   height: 350px;
   align-items: center;
+  position: relative;
 
   .image {
     width: 100%;
@@ -11,6 +12,29 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+    transition: all 0.2s linear;
+  }
+
+  .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 255px;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: all 0.2s linear;
+  }
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+    .custom-button {
+      opacity: 0.85;
+      transform: scaleY(1);
+      cursor: pointer;
+      box-shadow: 0 5px 8px 2px rgba(0, 0, 0, 0.5);
+    }
   }
 
   .collection-footer {
