--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -10,11 +10,14 @@
   position: relative;
   overflow: hidden;
 
+  & .background-image {
+    transition: 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+  }
+
   &:hover {
     cursor: pointer;
     & .background-image {
       transform: scale(1.1);
-      transition: 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
   }
 
@@ -39,8 +42,8 @@
   }
 
   .content {
-    height: 30%;
-    width: 15%;
+    height: 85px;
+    width: 120px;
     padding: 0 25px;
     display: flex;
     flex-direction: column;
